# rosbag_remote

./: CMakeLists.txt  README.md  package.xml
include/rosbag_remote/: rosbag_remote.hpp
launch/: run.launch
src/: rosbag_remote.cpp
src/node/: rosbag_remote_node.cpp
